fix aimation mobile issue and hide slider arrows 2

--- a/css/style.scss
+++ b/css/style.scss
@@ -1202,7 +1202,7 @@ img.path {
 
 
 
-.header-wrapper, .welcome-wrapper , .about-us-wrapper , .testimonials , .contact-us-wrapper , .solutions-page , .ecommerce-wrapper , .trusted-by-wrapper , .cta-wrapper , .why-our-solutions ,
+.header-wrapper , .about-us-wrapper , .testimonials , .contact-us-wrapper , .solutions-page , .ecommerce-wrapper , .trusted-by-wrapper , .cta-wrapper , .why-our-solutions ,
 .solutions-page.about-us-page , .goals , .cta-wrapper  , .goals.why-hire
 {
     overflow-x: hidden;
